Fixed position Menu mobile and alignment items footer

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 8%;
+    align-items: center;
 
     .footer__copyright{
         font-family: $font-family-mono;
