--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -31,10 +31,10 @@
             z-index: 1;
             user-select: none;
     
-            .header__mobile--menu{
-                position: absolute;
+            .header__mobile--menu{                
+                position: fixed;
                 width: 100%;
-                margin: 0 0 0 -85%;
+                margin: 0 0 0 -88%;
                 padding: 30px;  
                 background: $color-primary;
                 list-style-type: none;
@@ -86,6 +86,7 @@
         
                 &:checked ~ ul{
                     transform: none;
+                    // display: block;
                 }
             }
         
